update ControlsStorage